--- a/软件应用.md
+++ b/软件应用.md
@@ -12,5 +12,6 @@
 - [Mindbox--一款结构化的知识管理软件](https://amindbox.com/)
 - [CopyAsk--你的指尖AI助手](https://copyask.com/)
 - [板栗看板](https://banlikanban.com/)
+- [ugit--腾讯git客户端](https://code.tencent.com/ugit)
 
 
