--- a/开源项目.md
+++ b/开源项目.md
@@ -36,6 +36,7 @@
 - [vue-vben-admin](https://github.com/vbenjs/vue-vben-admin)
 - [soybean admin](https://docs.soybean.pro/)
 - [go-admin--中后台项目开发脚手架](https://www.go-admin.pro/)
+- [halo--强大易用的开源建站工具](https://www.halo.run/)
 -
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
