--- a/开发指南.md
+++ b/开发指南.md
@@ -17,4 +17,9 @@
 - [代码整洁之道](https://wonderwater.gitbooks.io/clean_architecture_zh/content/)
 - [API-design-guide](https://github.com/archnotes/gitbook/tree/master/API-design-guide)
 
+#### web
+- [阮一峰--web components教程](https://www.ruanyifeng.com/blog/2019/08/web_components.html)
+- [阮一峰--typescript教程](https://wangdoc.com/typescript/)
+- [阮一峰--javascript教程](https://wangdoc.com/javascript/)
+- [阮一峰--es6教程](https://wangdoc.com/es6/)
 
