--- a/开源项目.md
+++ b/开源项目.md
@@ -19,6 +19,8 @@
 - [jodconverter](https://github.com/jodconverter/jodconverter)
 - [pinyin-pro--一个识别准确、性能优异的专业的汉字拼音转换库](https://pinyin-pro.cn/)
 - [keycloak--身份认证登录授权](https://github.com/keycloak/keycloak)
+- [pdfsam--PDF Split And Merge)](https://github.com/torakiki/pdfsam)
+- [StirlingPDF--PDF文档工具](https://github.com/Frooodle/Stirling-PDF)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
