--- a/学习阅读.md
+++ b/学习阅读.md
@@ -7,10 +7,12 @@
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
 - [infoQ](https://www.infoq.cn/)
+- [理工酷--有用的技术资料，尽在理工酷](https://www.ligongku.com/)
 - [计算机专业学习路线](https://hackway.org/docs/cs/intro)
 - [后盾人](https://doc.houdunren.com/)
 - [bugstack--重学Java设计模式](https://bugstack.cn/)
 - [凤凰架构](http://icyfenix.cn/)
+- [深入架构原理与实践](https://www.thebyte.com.cn/)
 - [Chromium中文文档](https://ahangchen.gitbooks.io/chromium_doc_zh/content/zh/)
 - [技术文章摘抄](http://learn.lianglianglee.com/)
 - [ins--开源灵感数据库](https://github.com/zhaoolee/ins)
@@ -20,7 +22,7 @@
 - [一个聚合了 500 多个程序员博客的时间流](https://engineeringblogs.xyz/)
 - [Hello算法](https://www.hello-algo.com/)
 - [Go 学习之路](https://github.com/yangwenmai/learning-golang)
-- [码农周刊](https://github.com/toutiaoio/weekly.manong.io)
+- [股票技术指标](https://blog.forecho.com/)
 
 
 #### 眼界
@@ -42,7 +44,8 @@
 - [中文安全RSS](https://github.com/zhengjim/Chinese-Security-RSS)
 - [favorite link--收集喜欢的网址](https://www.guanguans.cn/favorite-link/)
 - [中文区优质rss源](https://github.com/weekend-project-space/top-rss-list)
-
+- [什么值得看--聚合信息网站](https://smzdk.top)
+- [system-design-101](https://github.com/ByteByteGoHq/system-design-101)
 
 #### 独立开发者
 
@@ -98,3 +101,4 @@
 
 - [Git 内部原理的快速介绍（英文）](https://sites.google.com/a/chromium.org/dev/developers/fast-intro-to-git-internals)
 - [哈希是什么](https://samwho.dev/hashing/)
+- [个人如何申请软件著作权（俗称软著）](https://github.com/CrossLee/How-to-apply-copyright)
