--- a/开源项目.md
+++ b/开源项目.md
@@ -21,6 +21,8 @@
 - [keycloak--身份认证登录授权](https://github.com/keycloak/keycloak)
 - [pdfsam--PDF Split And Merge)](https://github.com/torakiki/pdfsam)
 - [StirlingPDF--PDF文档工具](https://github.com/Frooodle/Stirling-PDF)
+- [eosphoros-ai--dbgpt](https://github.com/eosphoros-ai)
+- [皮克斯的工作台](https://gitee.com/tsbrowser/xiangtian-workbench)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
