--- a/日常工具.md
+++ b/日常工具.md
@@ -23,6 +23,7 @@
 - [komorebi--Windows 系统的窗口管理器，自动在桌面编排多个应用程序窗口](https://github.com/LGUG2Z/komorebi)
 - [pddon--在线画图工具，提供低代码和 AI 智能辅助工具](https://pddon.com/)
 - [tableconvert--表格转换html等格式](https://tableconvert.com/)
+- [banner生成工具](https://devops.datenkollektiv.de/banner.txt/index.html)
 
 #### 谷歌插件
 - [沉浸式翻译](https://immersivetranslate.com/)
