--- a/图标图库.md
+++ b/图标图库.md
@@ -29,11 +29,13 @@
 - [mingcute--图标库](https://www.mingcute.com/)
 - [yesicon--精选全球高品质、开源、免费的矢量图标库](https://yesicon.app/)
 
+
 #### 图库
 
 - [unsplash--无版权图库](https://unsplash.com/)
 - [pexels--图片素材](https://www.pexels.com/zh-cn/)
 - [堆糖壁纸头像](https://www.duitang.com/)
+- [堆友-阿里出品3D素材](https://d.design/)
 
 
 #### 特殊字符
