--- a/学习阅读.md
+++ b/学习阅读.md
@@ -23,6 +23,7 @@
 - [Hello算法](https://www.hello-algo.com/)
 - [Go 学习之路](https://github.com/yangwenmai/learning-golang)
 - [股票技术指标](https://blog.forecho.com/)
+- [微软官方推出了专门的AI课程](https://microsoft.github.io/generative-ai-for-beginners/#/)
 
 
 #### 眼界
@@ -102,3 +103,4 @@
 - [Git 内部原理的快速介绍（英文）](https://sites.google.com/a/chromium.org/dev/developers/fast-intro-to-git-internals)
 - [哈希是什么](https://samwho.dev/hashing/)
 - [个人如何申请软件著作权（俗称软著）](https://github.com/CrossLee/How-to-apply-copyright)
+- [大模型推理过程中几个重要的概念 (英文)](https://ig.ft.com/generative-ai/)
