--- a/前端组件.md
+++ b/前端组件.md
@@ -27,6 +27,8 @@
 - [uiverse--免费开源的数百个 UI 元素](https://uiverse.io/)
 - [stdf--基于 Svelte 与 Tailwind 的移动页面组件库](https://stdf.design/#/guide)
 - [vtable--字节跳动开源高性能表格组件库VTable](https://visactor.io/vtable/guide/Getting_Started/Getting_Started)
+- [shadcn-vue--使用 Radix Vue 和 Tailwind CSS 构建的可重用组件](https://www.shadcn-vue.com/docs)
+
 
 #### Uniapp UI
 - [uView--全面兼容nvue的uni-app生态框架，多平台快速开发的UI框架](https://www.uviewui.com/)
@@ -59,6 +61,7 @@
 
 
 #### 样式大全
+- [tailwindcss](https://www.tailwindcss.cn/)
 - [navnav--组件样式开发学习](https://navnav.co/)
 - [css-loaders--收集各种 CSS 的页面加载特效](https://css-loaders.com/)
 
