--- a/学习阅读.md
+++ b/学习阅读.md
@@ -47,6 +47,7 @@
 - [中文区优质rss源](https://github.com/weekend-project-space/top-rss-list)
 - [什么值得看--聚合信息网站](https://smzdk.top)
 - [system-design-101](https://github.com/ByteByteGoHq/system-design-101)
+- [libhunt--发现开源项目](https://www.libhunt.com/)
 
 #### 独立开发者
 
