--- a/开源项目.md
+++ b/开源项目.md
@@ -42,7 +42,8 @@
 - [soybean admin](https://docs.soybean.pro/)
 - [go-admin--中后台项目开发脚手架](https://www.go-admin.pro/)
 - [halo--强大易用的开源建站工具](https://www.halo.run/)
--
+- [auto-form--A React component that automatically creates a @shadcn/ui](https://github.com/vantezzen/auto-form)
+
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
 - [smart-flow-design--仿钉钉、飞书、雀书、流程审批设计](https://gitee.com/crowncloud/smart-flow-design/)
