--- a/学习阅读.md
+++ b/学习阅读.md
@@ -105,3 +105,4 @@
 - [哈希是什么](https://samwho.dev/hashing/)
 - [个人如何申请软件著作权（俗称软著）](https://github.com/CrossLee/How-to-apply-copyright)
 - [大模型推理过程中几个重要的概念 (英文)](https://ig.ft.com/generative-ai/)
+- [向量数据库](https://guangzhengli.com/blog/zh/vector-database/)
