--- a/开发工具.md
+++ b/开发工具.md
@@ -45,7 +45,11 @@
 
 #### 工具
 - [kafka-console-ui--kafka可视化管理平台](https://github.com/xxd763795151/kafka-console-ui)
+- [screenshot-to-code--屏幕生成代码](https://picoapps.xyz/free-tools/screenshot-to-code)
 
+#### 网站统计
+- [umami--网站统计](https://umami.is/)
+- [clarity-microsoft--微软出品网站统计](https://clarity.microsoft.com/)
 
 
 #### 项目文档
