--- a/开源项目.md
+++ b/开源项目.md
@@ -24,6 +24,8 @@
 - [StirlingPDF--PDF文档工具](https://github.com/Frooodle/Stirling-PDF)
 - [eosphoros-ai--dbgpt](https://github.com/eosphoros-ai)
 - [皮克斯的工作台](https://gitee.com/tsbrowser/xiangtian-workbench)
+- [novu--Novu 提供统一的 API，可以轻松地通过多种渠道发送通知，包括应用内、推送、电子邮件、短信和聊天](https://github.com/novuhq/novu)
+- [codesnaps--简约UI组件](https://www.codesnaps.io/browse-components)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
