--- a/前端组件.md
+++ b/前端组件.md
@@ -59,6 +59,7 @@
 - [vue-easytable--基于 Vue2 开发的表格组件，可作为excel使用](http://huangshuwei.gitee.io/vue-easytable/#/en/demo)
 - [ag-grid--媲美excel的表格组件](https://www.ag-grid.com/vue-data-grid/getting-started)
 - [vditor-编辑器](https://ld246.com/tag/vditor)
+- [vue-draggable-plus--vue2 ve3拖拽库](https://github.com/Alfred-Skyblue/vue-draggable-plus)
 
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
