--- a/学习阅读.md
+++ b/学习阅读.md
@@ -48,6 +48,7 @@
 - [什么值得看--聚合信息网站](https://smzdk.top)
 - [system-design-101](https://github.com/ByteByteGoHq/system-design-101)
 - [libhunt--发现开源项目](https://www.libhunt.com/)
+- [fre123 weekly--收录更新时长超过一年的周刊](https://www.fre123.com/weekly)
 
 #### 独立开发者
 
@@ -106,3 +107,4 @@
 - [个人如何申请软件著作权（俗称软著）](https://github.com/CrossLee/How-to-apply-copyright)
 - [大模型推理过程中几个重要的概念 (英文)](https://ig.ft.com/generative-ai/)
 - [向量数据库](https://guangzhengli.com/blog/zh/vector-database/)
+- [llm模型原理](https://bbycroft.net/llm)
