--- a/软件应用.md
+++ b/软件应用.md
@@ -6,6 +6,12 @@
 - [讯飞星火](https://xinghuo.xfyun.cn/)
 - [腾讯混元](https://hunyuan.tencent.com/)
 - [通义千问](https://qianwen.aliyun.com/)
+- [google bard](https://bard.google.com/)
+- [Ai Cute Wallpapers--AI生成图片](https://aicutewallpapers.com/)
+- [captions--AI进行图片解析生成摘要说明](https://felix.link/apps/captions)
+- [Microsoft AI课程](https://github.com/Microsoft/generative-ai-for-beginners)
+- [sdxlturbo--文转图](https://sdxlturbo.ai/)
+
 
 
 #### 软件应用
