--- a/开源项目.md
+++ b/开源项目.md
@@ -27,6 +27,13 @@
 - [novu--Novu 提供统一的 API，可以轻松地通过多种渠道发送通知，包括应用内、推送、电子邮件、短信和聊天](https://github.com/novuhq/novu)
 - [codesnaps--简约UI组件](https://www.codesnaps.io/browse-components)
 
+#### AI项目
+- [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
+- [DevOpsGPT](https://github.com/kuafuai/DevOpsGPT)
+- [AutoGPT](https://github.com/Significant-Gravitas/AutoGPT)
+- [gpt-engineer](https://github.com/AntonOsika/gpt-engineer)
+- [langchain](https://github.com/langchain-ai/langchain)
+
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
 - [cola-designer--基于vue2.0，拖拽式网站设计器、大屏设计器](https://gitee.com/colaiven/cola-designer/)
@@ -45,6 +52,7 @@
 - [go-admin--中后台项目开发脚手架](https://www.go-admin.pro/)
 - [halo--强大易用的开源建站工具](https://www.halo.run/)
 - [auto-form--A React component that automatically creates a @shadcn/ui](https://github.com/vantezzen/auto-form)
+- [Gmeek--基于Github Pages、Github Issues 和 Github Actions超轻量级个人博客模板](https://github.com/Meekdai/Gmeek)
 
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
