--- a/搜索引擎.md
+++ b/搜索引擎.md
@@ -3,3 +3,4 @@
 #### 搜索引擎
 
 - [识典古籍--北京大学和抖音公益合作的古籍数字化平台，可搜索390部经典古籍](https://www.shidianguji.com/)
+- [devv ai--最懂程序员的新一代 AI 搜索引擎](https://devv.ai/zh)
