--- a/开发工具.md
+++ b/开发工具.md
@@ -36,6 +36,7 @@
 
 #### 开放平台
 - [微信公众平台](https://mp.weixin.qq.com/)
+- [魔搭](https://modelscope.cn/home)
 
 
 #### 图床
@@ -46,6 +47,8 @@
 #### 工具
 - [kafka-console-ui--kafka可视化管理平台](https://github.com/xxd763795151/kafka-console-ui)
 - [screenshot-to-code--屏幕生成代码](https://picoapps.xyz/free-tools/screenshot-to-code)
+- [Favicon Grabber--一个开源的 Favicon 下载网站，可以一键抓取下载任意网站的 favicon](https://favicongrabber.com/)
+- [Favicon Finder--一键抓取到所有尺寸的favicon](https://besticon-demo.herokuapp.com/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
