--- a/前端组件.md
+++ b/前端组件.md
@@ -60,6 +60,7 @@
 - [ag-grid--媲美excel的表格组件](https://www.ag-grid.com/vue-data-grid/getting-started)
 - [vditor-编辑器](https://ld246.com/tag/vditor)
 - [vue-draggable-plus--vue2 ve3拖拽库](https://github.com/Alfred-Skyblue/vue-draggable-plus)
+- [aieditor--面向 AI 的下一代富文本编辑器](http://aieditor1.jpress.cn/)
 
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
