--- a/学习阅读.md
+++ b/学习阅读.md
@@ -61,6 +61,7 @@
 - [Hacker News 产品自荐](https://news.ycombinator.com/show)
 - [Website Hunt--发现好网站](https://www.websitehunt.co/popular)
 - [小众软件](https://www.appinn.com/)
+- [huggingface](https://huggingface.co/models)
 
 
 #### Blog
