--- a/开源项目.md
+++ b/开源项目.md
@@ -33,6 +33,12 @@
 - [AutoGPT](https://github.com/Significant-Gravitas/AutoGPT)
 - [gpt-engineer](https://github.com/AntonOsika/gpt-engineer)
 - [langchain](https://github.com/langchain-ai/langchain)
+- [AppAgent](https://github.com/mnotgod96/AppAgent)
+- [ChuanhuChatGPT](https://github.com/GaiZhenbiao/ChuanhuChatGPT)
+- [ChatGLM-6B](https://github.com/THUDM/ChatGLM-6B)
+- [anything-llm](https://github.com/Mintplex-Labs/anything-llm)
+- [DocsGPT](https://github.com/arc53/DocsGPT)
+- [SQL-GPT](https://github.com/CL-lau/SQL-GPT)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
