--- a/软件应用.md
+++ b/软件应用.md
@@ -11,6 +11,7 @@
 - [captions--AI进行图片解析生成摘要说明](https://felix.link/apps/captions)
 - [Microsoft AI课程](https://github.com/Microsoft/generative-ai-for-beginners)
 - [sdxlturbo--文转图](https://sdxlturbo.ai/)
+- [Seamless--研究人员可以输入论文描述，Seamless将生成基于真实论文的文献综述](https://seaml.es/)
 
 
 
