--- a/开发工具.md
+++ b/开发工具.md
@@ -49,6 +49,8 @@
 - [screenshot-to-code--屏幕生成代码](https://picoapps.xyz/free-tools/screenshot-to-code)
 - [Favicon Grabber--一个开源的 Favicon 下载网站，可以一键抓取下载任意网站的 favicon](https://favicongrabber.com/)
 - [Favicon Finder--一键抓取到所有尺寸的favicon](https://besticon-demo.herokuapp.com/)
+- [toolscat--工具猫](https://www.toolscat.com/)
+- [tablesgenerator--表格生成工具](https://www.tablesgenerator.com/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
