--- a/前端组件.md
+++ b/前端组件.md
@@ -11,6 +11,7 @@
 - [Undraw UI--一个 Vue 3 组件库,基于vue3的UI组件，主要功能有折叠，评论，锚点，搜索，聊天](https://undraw.gitee.io/undraw-ui/)
 - [opentiny--华为云企业级设计体系，适配 PC 端 / 移动端等多端，涵盖 Vue2 / Vue3 / Angular 多技术栈](https://opentiny.design/)
 - [itriton--ITRITON开发文档](http://itriton.icjs.ink/itriton/uniapp/vue2/start/introduce.html)
+- [antdv-vue](https://1x.antdv.com/docs/vue/introduce-cn/)
 
 #### 小程序 UI
 - [TDesign小程序组件库--腾讯的设计系统 TDesign 适配微信小程序的组件库](https://github.com/Tencent/tdesign-miniprogram)
@@ -61,6 +62,7 @@
 - [vditor-编辑器](https://ld246.com/tag/vditor)
 - [vue-draggable-plus--vue2 ve3拖拽库](https://github.com/Alfred-Skyblue/vue-draggable-plus)
 - [aieditor--面向 AI 的下一代富文本编辑器](http://aieditor1.jpress.cn/)
+- [wangeditor](https://www.wangeditor.com/v5/getting-started.html)
 
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
