--- a/学习阅读.md
+++ b/学习阅读.md
@@ -7,6 +7,7 @@
 - [掘金](https://juejin.cn/)
 - [微信阅读](https://weread.qq.com/)
 - [infoQ](https://www.infoq.cn/)
+- [inoreader-RSS聚合订阅](https://www.inoreader.com/)
 - [理工酷--有用的技术资料，尽在理工酷](https://www.ligongku.com/)
 - [计算机专业学习路线](https://hackway.org/docs/cs/intro)
 - [后盾人](https://doc.houdunren.com/)
@@ -49,6 +50,7 @@
 - [system-design-101](https://github.com/ByteByteGoHq/system-design-101)
 - [libhunt--发现开源项目](https://www.libhunt.com/)
 - [fre123 weekly--收录更新时长超过一年的周刊](https://www.fre123.com/weekly)
+
 
 #### 独立开发者
 
@@ -100,6 +102,7 @@
 - [安全小飞侠](http://avfisher.win/)
 - [张鑫旭网站--专注web前端偏前领域](https://www.zhangxinxu.com/)
 - [azhubaby](https://blog.azhubaby.com/)
+- [李瑞东设计博客](https://lrd.im/blog)
 
 #### 文章
 
