--- a/开源项目.md
+++ b/开源项目.md
@@ -26,6 +26,7 @@
 - [皮克斯的工作台](https://gitee.com/tsbrowser/xiangtian-workbench)
 - [novu--Novu 提供统一的 API，可以轻松地通过多种渠道发送通知，包括应用内、推送、电子邮件、短信和聊天](https://github.com/novuhq/novu)
 - [codesnaps--简约UI组件](https://www.codesnaps.io/browse-components)
+- [rsshub](https://docs.rsshub.app/zh/)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
