--- a/日常工具.md
+++ b/日常工具.md
@@ -15,6 +15,12 @@
 #### 编辑器
 - [新榜-公众号编辑器](https://edit.newrank.cn/)
 - [doocs-md--markdown风格编辑器](https://doocs.github.io/md/)
+
+
+#### RSS阅读器
+- [qireader](https://www.qireader.com.cn/)
+- [feedly](https://feedly.com)
+- [inoreader](https://www.inoreader.com)
   
 #### 工具
 - [qwerty--打字练习](https://qwerty.kaiyi.cool/)
