--- a/开源项目.md
+++ b/开源项目.md
@@ -27,6 +27,8 @@
 - [novu--Novu 提供统一的 API，可以轻松地通过多种渠道发送通知，包括应用内、推送、电子邮件、短信和聊天](https://github.com/novuhq/novu)
 - [codesnaps--简约UI组件](https://www.codesnaps.io/browse-components)
 - [rsshub](https://docs.rsshub.app/zh/)
+- [开源电子签章系统](https://www.kaifangqian.com/#/)
+- [javers--数据历史审计](https://github.com/javers/javers)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
