--- a/设计工具.md
+++ b/设计工具.md
@@ -32,6 +32,23 @@
 - [dribbble--设计师必备站点，国内顶尖的设计师都在上面](https://dribbble.com/LudmilaShevchenko#UI)
 - [behance--创意设计人士可以展示自己的作品，发现别人分享的创意作品](https://www.behance.net/)
 
+#### 动态生成
+- [blobmaker--不规则形状生成器·创意背景插图](https://www.blobmaker.app/)
+- [coolbackgrounds--实用性的背景模版编辑器](https://coolbackgrounds.io/)
+- [getwave--波浪线条背景生成器-创意不规则曲线背景插图](https://getwaves.io/)
+- [wangyasai--粒子散射效果背景生成器·动态效果](https://wangyasai.github.io/Stars-Emmision/)
+- [wangyasai--动态马赛克效果生成器](https://wangyasai.github.io/Awesome-Mosaic/)
+- [wangyasai--漫画速度线背景生成器](https://wangyasai.github.io/Speed-Line/)
+- [trianglify--低平面背景图生成效果-水晶3D效果](https://trianglify.io/)
+- [haikei--多种创意背景模版生成器·15种创意背景效果模版](https://app.haikei.app/)
+- [微词云--文字云背景生成器·多文字一键智能排版](https://www.weiciyun.com)
+- [wangyasai--线性文字背景生成器文字动态线性创意](https://wangyasai.github.io/waveFont/)
+- [微图云--图片云背景生成器·提供多种图片排版拼接](https://www.weitucloud.com)
+- [bggenerator--背景生成器](https://bggenerator.com/zh-cn.php)
+- []()
+
+
+
 
 
 
