--- a/前端组件.md
+++ b/前端组件.md
@@ -63,6 +63,7 @@
 - [vue-draggable-plus--vue2 ve3拖拽库](https://github.com/Alfred-Skyblue/vue-draggable-plus)
 - [aieditor--面向 AI 的下一代富文本编辑器](http://aieditor1.jpress.cn/)
 - [wangeditor](https://www.wangeditor.com/v5/getting-started.html)
+- [formula-rule-editor--公式规则编辑器](https://github.com/ZTrainWilliams/formula-rule-editor)
 
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
