--- a/前端组件.md
+++ b/前端组件.md
@@ -64,6 +64,7 @@
 - [aieditor--面向 AI 的下一代富文本编辑器](http://aieditor1.jpress.cn/)
 - [wangeditor](https://www.wangeditor.com/v5/getting-started.html)
 - [formula-rule-editor--公式规则编辑器](https://github.com/ZTrainWilliams/formula-rule-editor)
+- [schedule-x--谷歌日历的开源模仿品](https://schedule-x.dev/demos/calendar)
 
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
