--- a/图标图库.md
+++ b/图标图库.md
@@ -29,6 +29,7 @@
 - [mingcute--图标库](https://www.mingcute.com/)
 - [yesicon--精选全球高品质、开源、免费的矢量图标库](https://yesicon.app/)
 - [lucide-icons](https://lucide.dev/icons/)
+- [SearchEmoji--Emoji 搜索引擎，支持30种语言](https://searchemoji.app/zh-hans)
 
 
 #### 图库
