--- a/学习阅读.md
+++ b/学习阅读.md
@@ -50,6 +50,15 @@
 - [system-design-101](https://github.com/ByteByteGoHq/system-design-101)
 - [libhunt--发现开源项目](https://www.libhunt.com/)
 - [fre123 weekly--收录更新时长超过一年的周刊](https://www.fre123.com/weekly)
+- [News Minimalist--ChatGPT 选出的每日热点新闻](https://www.newsminimalist.com/)
+- [GPT之家](https://www.gptzj.com/)
+- [爱运营](https://www.iyunying.org/)
+- [青瓜传媒](https://www.opp2.com/)
+- [运营大叔](https://www.yydashu.com/)
+- [神器集](https://hao.logosc.cn/)
+- [未来百科--10000+优质AI工具](https://nav.6aiq.com/)
+- [AIHub--AI工具集](https://www.aihub.cn/)
+- [垒阅网（LEIUE.COM--为互联网创业者和企业提供有价值的商业讯息](https://www.leiue.com/)
 
 
 #### 独立开发者
@@ -64,6 +73,9 @@
 - [Website Hunt--发现好网站](https://www.websitehunt.co/popular)
 - [小众软件](https://www.appinn.com/)
 - [huggingface](https://huggingface.co/models)
+- [solo独立开发者社区](https://solo.xin/)
+- [产品分享社区](https://www.partnershare.cn/)
+- [独立开发变现周刊](https://www.ezindie.com/)
 
 
 #### Blog
