--- a/开源项目.md
+++ b/开源项目.md
@@ -29,6 +29,8 @@
 - [rsshub](https://docs.rsshub.app/zh/)
 - [开源电子签章系统](https://www.kaifangqian.com/#/)
 - [javers--数据历史审计](https://github.com/javers/javers)
+- [Rspress--基于 Rspack 的静态站点生成器](https://rspress.dev/zh/)
+- [Tianji--网站流量分析 + 业务监控告警 + 服务器监控三合一](https://github.com/msgbyte/tianji)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
