--- a/前端组件.md
+++ b/前端组件.md
@@ -70,6 +70,7 @@
 - [tailwindcss](https://www.tailwindcss.cn/)
 - [navnav--组件样式开发学习](https://navnav.co/)
 - [css-loaders--收集各种 CSS 的页面加载特效](https://css-loaders.com/)
+- [animotion--网页 CSS 动画生成器，可视化设定动画，自动生成代码](https://animotion.dev/)
 
 
 #### JavaScript
