--- a/字体资源.md
+++ b/字体资源.md
@@ -4,3 +4,4 @@
 - [Google Fonts--可供个人或商业用途](https://fonts.google.com/)
 - [fonts--字体天下](https://www.fonts.net.cn/)
 - [100font--免费](https://www.100font.com/)
+- [AI 字体模型市场](https://www.ai.zitijia.com/list/1)
