--- a/开发工具.md
+++ b/开发工具.md
@@ -53,6 +53,7 @@
 - [gstatic--Favicon在线获取接口，谷歌CDN](https://t3.gstatic.cn/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&size=64&url=https://firefly.adobe.com/)
 - [toolscat--工具猫](https://www.toolscat.com/)
 - [tablesgenerator--表格生成工具](https://www.tablesgenerator.com/)
+- [iHateRegex--收集常用正则表达式的资源库，并通过可视化帮助理解](https://ihateregex.io/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
