--- a/开源项目.md
+++ b/开源项目.md
@@ -31,6 +31,7 @@
 - [javers--数据历史审计](https://github.com/javers/javers)
 - [Rspress--基于 Rspack 的静态站点生成器](https://rspress.dev/zh/)
 - [Tianji--网站流量分析 + 业务监控告警 + 服务器监控三合一](https://github.com/msgbyte/tianji)
+- [Inpaint-web--开源的图片修复和超分辨率工具, 纯浏览器端实现](https://github.com/lxfater/inpaint-web)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
