--- a/日常工具.md
+++ b/日常工具.md
@@ -11,6 +11,7 @@
 - [stockai--基于ChatGPT的AI选股工具](https://stockai.trade/)
 - [similarweb--站点流量 查看并分析任何网站](https://www.similarweb.com/)
 - [分享鸭](https://shareduck.fun/)
+- [云原生应用市场](https://hub.grapps.cn/)
 
 #### 编辑器
 - [新榜-公众号编辑器](https://edit.newrank.cn/)
