--- a/软件应用.md
+++ b/软件应用.md
@@ -21,5 +21,5 @@
 - [板栗看板](https://banlikanban.com/)
 - [ugit--腾讯git客户端](https://code.tencent.com/ugit)
 - [Bluestone Markdown--所见即所得的 Markdown 桌面编辑器，集成了 Mermaid 图形与 Katex 公式](https://www.bluemd.me/)
-
+- [Tiny RDM--现代化的Redis桌面管理客户端](https://redis.tinycraft.cc/zh/)
 
