--- a/学习阅读.md
+++ b/学习阅读.md
@@ -59,6 +59,7 @@
 - [未来百科--10000+优质AI工具](https://nav.6aiq.com/)
 - [AIHub--AI工具集](https://www.aihub.cn/)
 - [垒阅网（LEIUE.COM--为互联网创业者和企业提供有价值的商业讯息](https://www.leiue.com/)
+- [imbyter--网络安全技术专题学习](https://imbyter.com/)
 
 
 #### 独立开发者
