--- a/开发工具.md
+++ b/开发工具.md
@@ -54,6 +54,8 @@
 - [toolscat--工具猫](https://www.toolscat.com/)
 - [tablesgenerator--表格生成工具](https://www.tablesgenerator.com/)
 - [iHateRegex--收集常用正则表达式的资源库，并通过可视化帮助理解](https://ihateregex.io/)
+- [vfox--开发工具安装](https://vfox.lhan.me/guides/quick-start.html)
+- [cyberchef--安全领域web工具，提供简单的编码(如XOR或Base64)、更复杂的加密(如AES、DES和Blowfish)、创建二进制文件和hexdump、数据的压缩和解压缩、计算散列和校验和、IPv6和X.509解析、更改字符编码等](https://cyberchef.org/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
