--- a/学习阅读.md
+++ b/学习阅读.md
@@ -116,6 +116,7 @@
 - [张鑫旭网站--专注web前端偏前领域](https://www.zhangxinxu.com/)
 - [azhubaby](https://blog.azhubaby.com/)
 - [李瑞东设计博客](https://lrd.im/blog)
+- [运维咖啡吧](https://blog.ops-coffee.cn/devops)
 
 #### 文章
 
