--- a/开发工具.md
+++ b/开发工具.md
@@ -16,6 +16,13 @@
 - [阿里云镜像--镜像文件下载](https://developer.aliyun.com/mirror/)
 
 
+#### 安全运维
+- [spug--灵活、强大、易用的开源运维平台](https://spug.cc/)
+- [TenSunS--基于Consul的运维平台](https://github.com/starsliao/TenSunS)
+- [vulhub--面向大众的开源漏洞靶场](https://github.com/vulhub/vulhub/blob/master/README.zh-cn.md)
+- [vulfocus--漏洞集成平台](https://fofapro.github.io/vulfocus/#/)
+- [fofa--网络空间安全搜索引擎](https://fofa.info/)
+
 #### 代码分享
 - [carbon--创建源代码的精美图像](https://carbon.now.sh/)
 
@@ -42,6 +49,8 @@
 #### 图床
 - [imgtp--免费图床](https://www.imgtp.com/)
 - [sm.ms](https://sm.ms/)
+- [datapipe](https://pic.datapipe.top/)
+- [img.cm](https://img.cm/)
 
 
 #### 工具
@@ -56,6 +65,9 @@
 - [iHateRegex--收集常用正则表达式的资源库，并通过可视化帮助理解](https://ihateregex.io/)
 - [vfox--开发工具安装](https://vfox.lhan.me/guides/quick-start.html)
 - [cyberchef--安全领域web工具，提供简单的编码(如XOR或Base64)、更复杂的加密(如AES、DES和Blowfish)、创建二进制文件和hexdump、数据的压缩和解压缩、计算散列和校验和、IPv6和X.509解析、更改字符编码等](https://cyberchef.org/)
+- [t.mr--短链生成](https://t.mr/)
+- [ip.im--IP查询](https://ip.im/)
+
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
