--- a/日常工具.md
+++ b/日常工具.md
@@ -2,6 +2,7 @@
 
 #### 文件处理
 - [Pdf24--免费且易于使用的在线PDF工具](https://tools.pdf24.org/zh/)
+- [pdf.is--开源项目 Stirling PDF 搭建](https://pdf.is/)
 
 #### 工具箱
 - [帮小忙--腾讯在线工具箱平台](https://tool.browser.qq.com/)
