--- a/开源项目.md
+++ b/开源项目.md
@@ -32,6 +32,7 @@
 - [Rspress--基于 Rspack 的静态站点生成器](https://rspress.dev/zh/)
 - [Tianji--网站流量分析 + 业务监控告警 + 服务器监控三合一](https://github.com/msgbyte/tianji)
 - [Inpaint-web--开源的图片修复和超分辨率工具, 纯浏览器端实现](https://github.com/lxfater/inpaint-web)
+- [rot--命令行工具，用来对密码进行加密/解密](https://github.com/candiddev/rot)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
