--- a/图标图库.md
+++ b/图标图库.md
@@ -30,7 +30,7 @@
 - [yesicon--精选全球高品质、开源、免费的矢量图标库](https://yesicon.app/)
 - [lucide-icons](https://lucide.dev/icons/)
 - [SearchEmoji--Emoji 搜索引擎，支持30种语言](https://searchemoji.app/zh-hans)
-
+- [openmoji--开源emoji设计](https://openmoji.org/)
 
 #### 图库
 
