--- a/学习阅读.md
+++ b/学习阅读.md
@@ -38,6 +38,7 @@
 - [brutalist--聚合最权威的报道](https://brutalist.report/)
 - [spike--设计良好的聚合新闻](https://spike.news/)
 - [Entertaining space--无聊，不知道看点什么？这里有一些推荐](https://neal.fun/)
+- [history-maps--按时间线直观的学习历史](https://history-maps.com/zh)
 - [HackWay技术学习路线](https://hackway.org/)
 - [52nlp--自然语言处理](https://www.52nlp.cn/)
 - [Rss-IT--记录了个人订阅的一些科技人的 Blog 地址](https://github.com/Gracker/Rss-IT)
