--- a/软件应用.md
+++ b/软件应用.md
@@ -22,4 +22,5 @@
 - [ugit--腾讯git客户端](https://code.tencent.com/ugit)
 - [Bluestone Markdown--所见即所得的 Markdown 桌面编辑器，集成了 Mermaid 图形与 Katex 公式](https://www.bluemd.me/)
 - [Tiny RDM--现代化的Redis桌面管理客户端](https://redis.tinycraft.cc/zh/)
+- [wcplus--致力于高效导出、分析公众号历史文章](https://www.wcplus.cn/)
 
