--- a/开源项目.md
+++ b/开源项目.md
@@ -46,6 +46,7 @@
 - [DocsGPT](https://github.com/arc53/DocsGPT)
 - [SQL-GPT](https://github.com/CL-lau/SQL-GPT)
 - [AutoPrompt](https://github.com/Eladlev/AutoPrompt)
+- [360zhinao](https://github.com/Qihoo360/360zhinao)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
