--- a/前端组件.md
+++ b/前端组件.md
@@ -49,6 +49,7 @@
 - [Vue-Draggable--是一个基于Sortable.js的Vue拖拽组件](https://sortablejs.github.io/Vue.Draggable)
 - [Vue-Tour--一个轻量级、简单且可定制的导览插件](https://pulsardev.github.io/vue-tour/)
 - [Tiptap--基于 Vue 的无渲染的富文本编辑器](https://github.com/ueberdosis/tiptap)
+- [bytemd-字节跳动、掘金官方编辑器](https://github.com/bytedance/bytemd)
 - [Quill.js--一个具有跨平台和跨浏览器支持的富文本编辑器](https://github.com/quilljs/quill/)
 - [TinyMCE--富文本编辑器](https://github.com/tinymce/tinymce)
 - [CKEditor5--一个强大的富文本编辑器框架，具有模块化架构、现代集成和协作编辑等功能](https://github.com/ckeditor/ckeditor5)
@@ -66,16 +67,19 @@
 - [formula-rule-editor--公式规则编辑器](https://github.com/ZTrainWilliams/formula-rule-editor)
 - [schedule-x--谷歌日历的开源模仿品](https://schedule-x.dev/demos/calendar)
 
+
 #### 样式大全
 - [tailwindcss](https://www.tailwindcss.cn/)
 - [navnav--组件样式开发学习](https://navnav.co/)
 - [css-loaders--收集各种 CSS 的页面加载特效](https://css-loaders.com/)
 - [animotion--网页 CSS 动画生成器，可视化设定动画，自动生成代码](https://animotion.dev/)
+- [Canvas Confetti--浏览器中的高性能五彩纸屑动画效果](https://www.kirilv.com/canvas-confetti/)
 
 
 #### JavaScript
 - [Fasty--一个极快的 JavaScript 模板引擎](https://gitee.com/fuhai/fasty/)
 - [cnchar--功能全面、多端支持的汉字拼音笔画 js 库](https://gitee.com/theajack/cnchar/)
+- [typical--实现打字效果](https://github.com/camwiegert/typical)
 
 
 #### 小程序组件
