--- a/软件应用.md
+++ b/软件应用.md
@@ -14,6 +14,10 @@
 - [Seamless--研究人员可以输入论文描述，Seamless将生成基于真实论文的文献综述](https://seaml.es/)
 
 
+#### AI提示词
+- [文心一言提示词](https://prompt.baidu.com/)
+
+
 
 #### 软件应用
 - [Mindbox--一款结构化的知识管理软件](https://amindbox.com/)
