--- a/学习阅读.md
+++ b/学习阅读.md
@@ -25,6 +25,7 @@
 - [Go 学习之路](https://github.com/yangwenmai/learning-golang)
 - [股票技术指标](https://blog.forecho.com/)
 - [微软官方推出了专门的AI课程](https://microsoft.github.io/generative-ai-for-beginners/#/)
+- [全网最全公考知识库](https://www.wolai.com/shangan/eTk9MfMbm1AtJUa4SrwREC)
 
 
 #### 眼界
@@ -78,6 +79,7 @@
 - [solo独立开发者社区](https://solo.xin/)
 - [产品分享社区](https://www.partnershare.cn/)
 - [独立开发变现周刊](https://www.ezindie.com/)
+- [程序员第二曲线手册，帮助程序员寻求主业之外的发展](https://symbol.iamkasong.com/)
 
 
 #### Blog
@@ -106,14 +108,9 @@
 - [伴鱼技术团队](https://tech.ipalfish.com/blog/)
 - [滴滴云博客](https://blog.didiyun.com/)
 - [滴滴技术](https://www.infoq.cn/profile/9FF5D5F89F3BC7/publish)
-- [吴亮(月影)--致力于Javasript技术和web标准的推广](https://www.zhihu.com/people/yue-ying-2-61)
-- [吕小鸣前端博客](https://www.nihaoshijie.com.cn/)
 - [CoolShell](https://coolshell.cn/)
-- [风雪之隅-Laruence的博客，微博平台架构师，PHP大牛](https://www.laruence.com/)
 - [后端技术 by Tim Yang](https://timyang.net/)
 - [cenalulu's Tech Blog](http://cenalulu.github.io/)
-- [王建硕](http://home.wangjianshuo.com/cn/20100524_aeeeie_caee.htm)
-- [安全小飞侠](http://avfisher.win/)
 - [张鑫旭网站--专注web前端偏前领域](https://www.zhangxinxu.com/)
 - [azhubaby](https://blog.azhubaby.com/)
 - [李瑞东设计博客](https://lrd.im/blog)
@@ -127,3 +124,5 @@
 - [大模型推理过程中几个重要的概念 (英文)](https://ig.ft.com/generative-ai/)
 - [向量数据库](https://guangzhengli.com/blog/zh/vector-database/)
 - [llm模型原理](https://bbycroft.net/llm)
+- [ChatGPT+工作流自动化处理复杂任务 | Dify工作流完整教学 | 比肩Coze](https://mp.weixin.qq.com/s/gFhpYiax_IrEQ_bYOcUAlQ)
+- [Coze + 爬虫 = 周末去哪不用愁！！](https://mp.weixin.qq.com/s/OfN3ndVfye9p_0wIeuQWng)
