--- a/开源项目.md
+++ b/开源项目.md
@@ -68,6 +68,7 @@
 - [halo--强大易用的开源建站工具](https://www.halo.run/)
 - [auto-form--A React component that automatically creates a @shadcn/ui](https://github.com/vantezzen/auto-form)
 - [Gmeek--基于Github Pages、Github Issues 和 Github Actions超轻量级个人博客模板](https://github.com/Meekdai/Gmeek)
+- [landing-page-boilerplate--通用的落地页模板](https://github.com/weijunext/landing-page-boilerplate/blob/main/README-zh.md)
 
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
