--- a/日常工具.md
+++ b/日常工具.md
@@ -17,6 +17,7 @@
 #### 编辑器
 - [新榜-公众号编辑器](https://edit.newrank.cn/)
 - [doocs-md--markdown风格编辑器](https://doocs.github.io/md/)
+- [MDX Editor--微信排版编辑器](https://editor.runjs.cool/)
 
 
 #### RSS阅读器
@@ -40,4 +41,7 @@
 #### 谷歌插件
 - [沉浸式翻译](https://immersivetranslate.com/)
 - [csspicker--copy css from any website](https://www.csspicker.dev/)
+- [source viewer--插件源代码查看](https://chromewebstore.google.com/detail/chrome-extension-source-v/jifpbeccnghkjeaalbbjmodiffmgedin)
+- [Get Favicon--获取favicon](https://chromewebstore.google.com/detail/get-favicon/gpipahagclehninhhjkhbkliinfofnhe?hl=zh-CN&utm_source=ext_sidebar)
+- [Sharespot--一个用于生成美观的网页文本分享图像的工具](https://chromewebstore.google.com/detail/share-spot/npndlbmmacohfcbfcgiekpanldhfejpk?hl=zh-CN)
 
