--- a/学习阅读.md
+++ b/学习阅读.md
@@ -80,6 +80,7 @@
 - [产品分享社区](https://www.partnershare.cn/)
 - [独立开发变现周刊](https://www.ezindie.com/)
 - [程序员第二曲线手册，帮助程序员寻求主业之外的发展](https://symbol.iamkasong.com/)
+- [硬地骇客--关于 Podwise 产品从灵感到变现过程](https://book.hardhacker.com/)
 
 
 #### Blog
