--- a/开发工具.md
+++ b/开发工具.md
@@ -11,6 +11,7 @@
 - [flutterflow--Flutter低代码](https://flutterflow.io/)
 - [lafyun--云开发平台](https://www.lafyun.com/guide/)
 
+
 #### 云镜像
 - [华为云镜像--镜像文件下载](https://mirrors.huaweicloud.com/home)
 - [阿里云镜像--镜像文件下载](https://developer.aliyun.com/mirror/)
@@ -22,6 +23,8 @@
 - [vulhub--面向大众的开源漏洞靶场](https://github.com/vulhub/vulhub/blob/master/README.zh-cn.md)
 - [vulfocus--漏洞集成平台](https://fofapro.github.io/vulfocus/#/)
 - [fofa--网络空间安全搜索引擎](https://fofa.info/)
+- [zoomeye--钟馗之眼](https://www.zoomeye.org/)
+
 
 #### 代码分享
 - [carbon--创建源代码的精美图像](https://carbon.now.sh/)
@@ -67,7 +70,7 @@
 - [cyberchef--安全领域web工具，提供简单的编码(如XOR或Base64)、更复杂的加密(如AES、DES和Blowfish)、创建二进制文件和hexdump、数据的压缩和解压缩、计算散列和校验和、IPv6和X.509解析、更改字符编码等](https://cyberchef.org/)
 - [t.mr--短链生成](https://t.mr/)
 - [ip.im--IP查询](https://ip.im/)
-
+- [ipcheck](https://ipcheck.ing/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
