--- a/日常工具.md
+++ b/日常工具.md
@@ -37,6 +37,8 @@
 - [pddon--在线画图工具，提供低代码和 AI 智能辅助工具](https://pddon.com/)
 - [tableconvert--表格转换html等格式](https://tableconvert.com/)
 - [banner生成工具](https://devops.datenkollektiv.de/banner.txt/index.html)
+- [stockcake--图片搜索](https://stockcake.com/)
+- [stocktune--音乐搜索](https://stocktune.com/)
 
 #### 谷歌插件
 - [沉浸式翻译](https://immersivetranslate.com/)
