--- a/图标图库.md
+++ b/图标图库.md
@@ -38,7 +38,7 @@
 - [pexels--图片素材](https://www.pexels.com/zh-cn/)
 - [堆糖壁纸头像](https://www.duitang.com/)
 - [堆友-阿里出品3D素材](https://d.design/)
-
+- [stockcake--图片搜索](https://stockcake.com/)
 
 #### 特殊字符
 
