--- a/开源项目.md
+++ b/开源项目.md
@@ -33,6 +33,7 @@
 - [Tianji--网站流量分析 + 业务监控告警 + 服务器监控三合一](https://github.com/msgbyte/tianji)
 - [Inpaint-web--开源的图片修复和超分辨率工具, 纯浏览器端实现](https://github.com/lxfater/inpaint-web)
 - [rot--命令行工具，用来对密码进行加密/解密](https://github.com/candiddev/rot)
+- [photo-similarity-search--图片向量化搜索](https://github.com/harperreed/photo-similarity-search)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
@@ -70,13 +71,16 @@
 - [Gmeek--基于Github Pages、Github Issues 和 Github Actions超轻量级个人博客模板](https://github.com/Meekdai/Gmeek)
 - [landing-page-boilerplate--通用的落地页模板](https://github.com/weijunext/landing-page-boilerplate/blob/main/README-zh.md)
 
+
 #### 工作流项目
 - [json-flow--审批工作流自研引擎系统](https://jackrolling.gitee.io/docsify/#/)
 - [smart-flow-design--仿钉钉、飞书、雀书、流程审批设计](https://gitee.com/crowncloud/smart-flow-design/)
 
-#### 知识管理
+
+#### 知识/项目管理
 - [think--审批工作流自研引擎系统](https://github.com/fantasticit/think)
 - [sparrow--实现语雀的50%功能,基本满足企业内部知识平台的需要](https://github.com/leizhu900516/sparrow)
-
+- [dootask--开源的在线项目与任务管理](https://github.com/kuaifan/dootask)
+- [answer--知识问答社区](https://answer.apache.org/)
 
   
