--- a/图标图库.md
+++ b/图标图库.md
@@ -31,6 +31,8 @@
 - [lucide-icons](https://lucide.dev/icons/)
 - [SearchEmoji--Emoji 搜索引擎，支持30种语言](https://searchemoji.app/zh-hans)
 - [openmoji--开源emoji设计](https://openmoji.org/)
+- [svgl--常用徽标 Logo 的搜索引擎，提供 SVG 文件下载](https://svgl.vercel.app/)
+
 
 #### 图库
 
