--- a/学习阅读.md
+++ b/学习阅读.md
@@ -26,6 +26,7 @@
 - [股票技术指标](https://blog.forecho.com/)
 - [微软官方推出了专门的AI课程](https://microsoft.github.io/generative-ai-for-beginners/#/)
 - [全网最全公考知识库](https://www.wolai.com/shangan/eTk9MfMbm1AtJUa4SrwREC)
+- [技术概念示意图--收集各种技术概念的示意图](https://github.com/ByteByteGoHq/system-design-101#rest-api-vs-graphql)
 
 
 #### 眼界
