--- a/开发工具.md
+++ b/开发工具.md
@@ -67,6 +67,7 @@
 - [tablesgenerator--表格生成工具](https://www.tablesgenerator.com/)
 - [iHateRegex--收集常用正则表达式的资源库，并通过可视化帮助理解](https://ihateregex.io/)
 - [vfox--开发工具安装](https://vfox.lhan.me/guides/quick-start.html)
+- [vmr--一个跨平台的通用版本管理器，目前支持40多种编程语言和工具](https://github.com/gvcgo/version-manager/blob/main/docs/readmeCN.md)
 - [cyberchef--安全领域web工具，提供简单的编码(如XOR或Base64)、更复杂的加密(如AES、DES和Blowfish)、创建二进制文件和hexdump、数据的压缩和解压缩、计算散列和校验和、IPv6和X.509解析、更改字符编码等](https://cyberchef.org/)
 - [t.mr--短链生成](https://t.mr/)
 - [ip.im--IP查询](https://ip.im/)
