--- a/开发指南.md
+++ b/开发指南.md
@@ -6,16 +6,24 @@
 - [CSS常用命名名称](https://www.cnblogs.com/john-jxsr/p/8399443.html)
 - [有趣的CSS](https://funcss.liujueyi.cn/)
 
+
 #### 运维
 - [Linux 环境如何使用 kill 命令优雅停止 Java 服务](https://mp.weixin.qq.com/s/Fh2GX5ZHZ0Kt-_7Tz1pZkw)
 
+
 #### Nginx
 - [ngx_http_secure_link_module](http://nginx.org/en/docs/http/ngx_http_secure_link_module.html)
+
+
+#### 架构
+- [技术概念示意图--收集各种技术概念的示意图](https://github.com/ByteByteGoHq/system-design-101#rest-api-vs-graphql)
+
 
 #### java
 - [Spring中文文档](https://springdoc.cn/)
 - [代码整洁之道](https://wonderwater.gitbooks.io/clean_architecture_zh/content/)
 - [API-design-guide](https://github.com/archnotes/gitbook/tree/master/API-design-guide)
+
 
 #### web
 - [阮一峰--web components教程](https://www.ruanyifeng.com/blog/2019/08/web_components.html)
