--- a/开源项目.md
+++ b/开源项目.md
@@ -34,6 +34,7 @@
 - [Inpaint-web--开源的图片修复和超分辨率工具, 纯浏览器端实现](https://github.com/lxfater/inpaint-web)
 - [rot--命令行工具，用来对密码进行加密/解密](https://github.com/candiddev/rot)
 - [photo-similarity-search--图片向量化搜索](https://github.com/harperreed/photo-similarity-search)
+- [dockit--Elasticsearch/OpenSearch 的跨平台桌面客户端](https://github.com/geek-fun/dockit)
 
 #### AI项目
 - [langchain-ChatGLM](https://gitee.com/deepeye/langchain-ChatGLM)
