--- a/软件应用.md
+++ b/软件应用.md
@@ -12,6 +12,7 @@
 - [Microsoft AI课程](https://github.com/Microsoft/generative-ai-for-beginners)
 - [sdxlturbo--文转图](https://sdxlturbo.ai/)
 - [Seamless--研究人员可以输入论文描述，Seamless将生成基于真实论文的文献综述](https://seaml.es/)
+- [lightning ai--帮助用户快速构建AI产品，训练、微调和部署模型](https://lightning.ai/)
 
 
 #### AI提示词
