--- a/软件应用.md
+++ b/软件应用.md
@@ -12,12 +12,22 @@
 - [Microsoft AI课程](https://github.com/Microsoft/generative-ai-for-beginners)
 - [sdxlturbo--文转图](https://sdxlturbo.ai/)
 - [Seamless--研究人员可以输入论文描述，Seamless将生成基于真实论文的文献综述](https://seaml.es/)
+- [万彩动画大师--一款MG动画视频制作软件，给零基础用户做动画视频](https://www.animiz.cn/)
 - [lightning ai--帮助用户快速构建AI产品，训练、微调和部署模型](https://lightning.ai/)
+- [星海AI-GPU算力云平台](https://ai.spacehpc.com/)
+
+
+#### 模型算力
+- [lightning ai--帮助用户快速构建AI产品，训练、微调和部署模型](https://lightning.ai/)
+- [星海AI-GPU算力云平台](https://ai.spacehpc.com/)
+
+
+#### AI集合
+- [AI APPS--收录超过5000种AI工具的AI导航](https://www.ai-apps.com.cn/)
 
 
 #### AI提示词
 - [文心一言提示词](https://prompt.baidu.com/)
-
 
 
 #### 软件应用
@@ -28,4 +38,5 @@
 - [Bluestone Markdown--所见即所得的 Markdown 桌面编辑器，集成了 Mermaid 图形与 Katex 公式](https://www.bluemd.me/)
 - [Tiny RDM--现代化的Redis桌面管理客户端](https://redis.tinycraft.cc/zh/)
 - [wcplus--致力于高效导出、分析公众号历史文章](https://www.wcplus.cn/)
+
 
