--- a/前端组件.md
+++ b/前端组件.md
@@ -68,6 +68,7 @@
 - [wangeditor](https://www.wangeditor.com/v5/getting-started.html)
 - [formula-rule-editor--公式规则编辑器](https://github.com/ZTrainWilliams/formula-rule-editor)
 - [schedule-x--谷歌日历的开源模仿品](https://schedule-x.dev/demos/calendar)
+- [vue-turn-clock--简单的翻页倒计时组件也可以是展示当前时间，支持 Vue 3 组合式 API，使用 TypeScript 编写](https://github.com/limintao/vue-turn-clock)
 
 
 #### 样式大全
