--- a/图标图库.md
+++ b/图标图库.md
@@ -5,6 +5,7 @@
 
 - [undraw](https://undraw.co/illustrations)
 - [manypixels--无版权免费的插图](https://www.manypixels.co/gallery/)
+- [pixabay--免费正版矢量图片](https://pixabay.com/zh/vectors/)
 
 #### 图标
 
