--- a/学习阅读.md
+++ b/学习阅读.md
@@ -27,7 +27,7 @@
 - [微软官方推出了专门的AI课程](https://microsoft.github.io/generative-ai-for-beginners/#/)
 - [全网最全公考知识库](https://www.wolai.com/shangan/eTk9MfMbm1AtJUa4SrwREC)
 - [技术概念示意图--收集各种技术概念的示意图](https://github.com/ByteByteGoHq/system-design-101#rest-api-vs-graphql)
-
+- [读客-移动控件学习清单](https://www.doock.cn/)
 
 #### 眼界
 
@@ -63,6 +63,7 @@
 - [AIHub--AI工具集](https://www.aihub.cn/)
 - [垒阅网（LEIUE.COM--为互联网创业者和企业提供有价值的商业讯息](https://www.leiue.com/)
 - [imbyter--网络安全技术专题学习](https://imbyter.com/)
+- [metatrend.ai--AI精选每日最新新闻事件](https://metatrend.ai/)
 
 
 #### 独立开发者
