--- a/设计工具.md
+++ b/设计工具.md
@@ -11,6 +11,12 @@
 - [aicolors--AI生成主题色](https://aicolors.co/)
 - [迅排设计--开源在线海报设计器](https://github.com/palxiao/poster-design)
 - [lottiefiles动效](https://lottiefiles.com/)
+- [创客贴--提供丰富的设计模板](https://www.chuangkit.com/)
+- [Fotor--是一个简单易用的在线设计工具，可以快速制作出吸引人的封面图](https://www.fotor.com.cn/)
+- [Crello--是一个在线设计平台](https://create.vista.com/)
+- [figen--封面图背景图制作](https://figen.cc/)
+- [haikei--在线免费生成样式多样的背景神器，如通过波浪形、圆形、圆环、三角形、五星形等生成各种特殊排布的图片背景](https://app.haikei.app/)
+- [AI设计师--细分了小红书封面、视频封面、公众号主图、公众号次图、关注二维码、文章标题等场景](https://www.logosc.cn/design)
 
 #### 图片处理
 - [图标工厂--一键生成所有尺寸的应用图标](https://icon.wuruihong.com/)
