--- a/开发工具.md
+++ b/开发工具.md
@@ -24,6 +24,9 @@
 - [vulfocus--漏洞集成平台](https://fofapro.github.io/vulfocus/#/)
 - [fofa--网络空间安全搜索引擎](https://fofa.info/)
 - [zoomeye--钟馗之眼](https://www.zoomeye.org/)
+- [CN-SEC 中文网](http://cn-sec.com/)
+- [风炫安全](https://evalshell.com/)
+- [PeiQi文库--面向网络安全从业者的知识文库](https://peiqi.wgpsec.org/)
 
 
 #### 代码分享
@@ -76,6 +79,10 @@
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
 - [clarity-microsoft--微软出品网站统计](https://clarity.microsoft.com/)
+
+#### 独立建站
+- [tweeze--推子，信息聚合](https://tweeze.app/zh)
+- [tally--表单收集](https://tally.so/)
 
 
 #### 项目文档
