--- a/图标图库.md
+++ b/图标图库.md
@@ -10,6 +10,7 @@
 #### 图标
 
 - [Iconfont--阿里巴巴图标库](https://www.iconfont.cn/)
+- [xicons-naiveui推荐](https://www.xicons.org/#/zh-CN)
 - [Icones](https://icones.js.org/)
 - [IconPark--字节跳动图标库](https://iconpark.oceanengine.com/) 
 - [Font Awesome--提供了可缩放的矢量图标，可以使用CSS所提供的所有特性对它们进行更改](https://fontawesome.com/docs)
