--- a/前端组件.md
+++ b/前端组件.md
@@ -12,6 +12,7 @@
 - [opentiny--华为云企业级设计体系，适配 PC 端 / 移动端等多端，涵盖 Vue2 / Vue3 / Angular 多技术栈](https://opentiny.design/)
 - [itriton--ITRITON开发文档](http://itriton.icjs.ink/itriton/uniapp/vue2/start/introduce.html)
 - [antdv-vue](https://1x.antdv.com/docs/vue/introduce-cn/)
+- [vue3-resource--包含web端&移动端&小程序&Electron等栏目](https://hu-snail.github.io/vue3-resource/)
 
 #### 小程序 UI
 - [TDesign小程序组件库--腾讯的设计系统 TDesign 适配微信小程序的组件库](https://github.com/Tencent/tdesign-miniprogram)
