--- a/学习阅读.md
+++ b/学习阅读.md
@@ -28,6 +28,8 @@
 - [全网最全公考知识库](https://www.wolai.com/shangan/eTk9MfMbm1AtJUa4SrwREC)
 - [技术概念示意图--收集各种技术概念的示意图](https://github.com/ByteByteGoHq/system-design-101#rest-api-vs-graphql)
 - [读客-移动控件学习清单](https://www.doock.cn/)
+- [见室纸藏--优质信息源的导航](https://bento.me/apaper)
+- [spring4all](https://spring4all.com/)
 
 #### 眼界
 
@@ -83,7 +85,7 @@
 - [独立开发变现周刊](https://www.ezindie.com/)
 - [程序员第二曲线手册，帮助程序员寻求主业之外的发展](https://symbol.iamkasong.com/)
 - [硬地骇客--关于 Podwise 产品从灵感到变现过程](https://book.hardhacker.com/)
-
+- [PH今日热榜](https://decohack.com/category/producthunt/)
 
 #### Blog
 
