--- a/开发工具.md
+++ b/开发工具.md
@@ -75,6 +75,8 @@
 - [t.mr--短链生成](https://t.mr/)
 - [ip.im--IP查询](https://ip.im/)
 - [ipcheck](https://ipcheck.ing/)
+- [automa--浏览器自动化操作](https://automa.wiki/)
+- [openwrite--自媒体运营管理工具](https://openwrite.cn/)
 
 #### 网站统计
 - [umami--网站统计](https://umami.is/)
@@ -83,7 +85,7 @@
 #### 独立建站
 - [tweeze--推子，信息聚合](https://tweeze.app/zh)
 - [tally--表单收集](https://tally.so/)
-
+- [utteranc.es--基于 GitHub issues 的评论工具](https://utteranc.es/)
 
 #### 项目文档
 - [docsify](https://docsify.js.org/#/zh-cn/)
