--- a/开源项目.md
+++ b/开源项目.md
@@ -35,6 +35,7 @@
 - [rot--命令行工具，用来对密码进行加密/解密](https://github.com/candiddev/rot)
 - [photo-similarity-search--图片向量化搜索](https://github.com/harperreed/photo-similarity-search)
 - [dockit--Elasticsearch/OpenSearch 的跨平台桌面客户端](https://github.com/geek-fun/dockit)
+- [draft-flow--基于LogicFlow和rough.js实现的手绘风格流程图。](https://github.com/towersxu/draft-flow)
 
 
 #### AI项目
@@ -51,6 +52,7 @@
 - [SQL-GPT](https://github.com/CL-lau/SQL-GPT)
 - [AutoPrompt](https://github.com/Eladlev/AutoPrompt)
 - [360zhinao](https://github.com/Qihoo360/360zhinao)
+- [producthunt-daily-hot--自动生成每日Product Hunt热门产品中文榜单，基于GitHub Actions自动提交Markdown文件](https://github.com/ViggoZ/producthunt-daily-hot)
 
 #### 低代码项目
 - [dooringx--开箱即用的H5可视化搭建框架，轻松搭建自己的可视化搭建平台](https://gitee.com/lowcode-china/dooringx)
