--- a/软件应用.md
+++ b/软件应用.md
@@ -15,7 +15,7 @@
 - [万彩动画大师--一款MG动画视频制作软件，给零基础用户做动画视频](https://www.animiz.cn/)
 - [lightning ai--帮助用户快速构建AI产品，训练、微调和部署模型](https://lightning.ai/)
 - [星海AI-GPU算力云平台](https://ai.spacehpc.com/)
-
+- [AI助手](https://bot.360.com/)
 
 #### 模型算力
 - [lightning ai--帮助用户快速构建AI产品，训练、微调和部署模型](https://lightning.ai/)
