--- a/社区论坛.md
+++ b/社区论坛.md
@@ -5,6 +5,8 @@
 - [v2ex](https://www.v2ex.com/)
 - [discord](https://discord.com/)
 - [codenews--一个国人分享技术工具的社区](https://codenews.cc/)
+- [learnku--编程知识社区](https://learnku.com/)
+- [spring4all](https://spring4all.com/)
 - [HamZone--中国业余无线电爱好者交流社区](https://bbs.hamzone.cn/)
 - [AE博客](http://www.aeink.com/)
 - [站酷--发现更好的设计，原创设计交流社区](https://www.zcool.com.cn/)
