--- a/开源项目.md
+++ b/开源项目.md
@@ -36,6 +36,7 @@
 - [photo-similarity-search--图片向量化搜索](https://github.com/harperreed/photo-similarity-search)
 - [dockit--Elasticsearch/OpenSearch 的跨平台桌面客户端](https://github.com/geek-fun/dockit)
 - [draft-flow--基于LogicFlow和rough.js实现的手绘风格流程图。](https://github.com/towersxu/draft-flow)
+- [HotList-Web--聚合热榜Vue前端](https://github.com/uxiaohan/HotList-Web)
 
 
 #### AI项目
